--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fa fa-circle fa-stack-2x text-primary"></i>
-            <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+            <i class="fa fa-bars fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Materiais</h4>
           <p class="text-muted">Escolhemos os materiais com os nossos clientes, de acordo com as suas necessidades e orçamento.</p>
@@ -109,7 +109,7 @@
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
             <i class="fa fa-circle fa-stack-2x text-primary"></i>
-            <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+            <i class="fa fa-star fa-stack-1x fa-inverse"></i>
           </span>
           <h4 class="service-heading">Especialidades</h4>
           <p class="text-muted">Revestimento exterior, Electricidade, Canalização, Carpintaria.</p>
@@ -178,7 +178,15 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Fale connosco</h2>
-          <h3 class="section-subheading section-subheading-white">Estamos aqui para a sua casa, para projectar, remodelar e reconstruir.</h3>
+          <h3 class="section-subheading section-subheading-white">
+            Estamos aqui para a sua casa, para projectar, remodelar e reconstruir.
+            <br><br>
+            Telefone: +351 91 652 96 90
+          </h3>
+          <h3 class="contact-us-heading">
+              Ou envie-nos uma mensagem:
+          </h3>
+          <br>
         </div>
       </div>
       <div class="row">
